--- a/index.html
+++ b/index.html
@@ -1,5 +1,9 @@
 <html>
-  <head> </head>
+  <head>
+    <meta charset="utf-8" />
+    <title>Sample</title>
+    <link rel="stylesheet" href="style.css" />
+  </head>
   <body>
     <main>
       <h1>Home</h1>
@@ -8,5 +12,6 @@
       <h1>Home</h1>
       <h1>Home</h1>
     </main>
+    <script type="text/javascript" src="script.js"></script>
   </body>
 </html>
